# MonitoringSystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
agents/: cpu.c  cpu.h  defs.h  memory.c  memory.h  network.c  network.h  util.c  util.h
base/: defs.h  util.c  util.h
config/: agents.conf  config.agents
log/: metric.logs  metrics.logs
resources/: conf.agents
src/: main.cc
src/agents/: agents.cc  agents.h  builder.cc  builder.h  dll.cc  dll.h  handler.cc  handler.h
src/agents/core/: CMakeLists.txt  cpu.h  memory.c  memory.h  network.c  network.h  util.c
src/agents/core/base/: defs.h  util.c  util.h
src/agents/core/include/: cpu.h  defs.h  memory.h  network.h
src/agents/core/linux/: cpu.c  memory.c  network.c
src/agents/core/macos/: cpu.c  memory.c  network.c
src/agents/core/src/: cpu.c  memory.c  network.c  util.c  util.h
src/agents/lib/: CMakeCache.txt  Makefile  cmake_install.cmake
src/base/: config.cc  config.h  error.h  logger.h  paths.h  types.cc  types.h
src/concurrency/: worker.cc  worker.h
src/controller/: controller.cc  controller.h
src/log/: metric.logs
src/logger/: logger.h
src/model/: config.h  config_parser.cc  config_parser.h  files.cc  files.h  model.cc  model.h  util.cc  util.h
src/telegram/: telegram_bot.cc  telegram_bot.h
src/tools/: telegram_bot.cc  telegram_bot.h
src/view/: monitoringview.cc  monitoringview.h  monitoringview.ui  plot.cc  plot.h
